# robo_arm

./: README.md
rarm_control/: CMakeLists.txt  package.xml
rarm_control/config/: rarm_control.yaml
rarm_control/include/: kinematics.h  main.h  rarm_controller.h  rarm_keyboard_control.h  trans_matrix.h
rarm_control/launch/: rarm_control.launch  rarm_rqt.launch  rarm_rqt.perspective
rarm_control/src/: kinematics.cpp  main.cpp  rarm_keyboard_control.cpp  trans_matrix.cpp
rarm_description/: CMakeLists.txt  package.xml
rarm_description/launch/: rarm_rviz.launch
rarm_description/meshes/: base.dae  gripper.dae  l_finger_0.dae  l_finger_1.dae  links.dae  platform.dae  servo.dae
rarm_description/urdf/: rarm _reference.xacro  rarm.gazebo  rarm.xacro
rarm_framework/: CMakeLists.txt  package.xml
rarm_framework/include/rarm_framework/: kinematics.h  singleton.h  trans_matrix.h
rarm_framework/src/: kinematics.cpp  singleton.cpp  trans_matrix.cpp
rarm_gazebo/: CMakeLists.txt  package.xml
rarm_gazebo/launch/: rarm_world.launch
rarm_msgs/: CMakeLists.txt  package.xml
rarm_msgs/msg/: Control_msg.msg
rarm_msgs/rarm_ctrl_msg/: CMakeLists.txt  package.xml
rarm_msgs/rarm_ctrl_msg/msg/: Ctrl_msg.msg
rarm_msgs/rarm_ctrl_vector_msg/: CMakeLists.txt  package.xml
rarm_msgs/rarm_ctrl_vector_msg/msg/: Ctrl_vector_msg.msg
