<?xml version="1.0"?>
<package>
  <name>rarm_control</name>
  <version>0.0.0</version>
  <description>The rarm_control package</description>

  <author email="vasilyev.georgy@gmail.com">Georgy Vasilyev</author>

  <maintainer email="vasilyev.georgy@gmail.com">Georgy Vasilyev</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
