<?xml version="1.0"?>
<package format="2">
  <name>rarm_control</name>
  <version>0.0.0</version>
  <description>The rarm_control package</description>

  <author email="vasilyev.georgy@gmail.com">Georgy Vasilyev</author>

  <maintainer email="vasilyev.georgy@gmail.com">Georgy Vasilyev</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>



  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>effort_controllers</exec_depend>


  <export>
  </export>

</package>
