<?xml version="1.0"?>
<package>
  <name>rarm_description</name>
  <version>0.0.0</version>
  <description>The rarm_description package</description>

  <author email="vasilyev.georgy@gmail.com">Georgy Vasilyev</author>
  <maintainer email="vasilyev.georgy@gmail.com">Georgy Vasilyev</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
