<package>
  <name>rarm_gazebo</name>
  <version>0.1.0</version>
  <description>rarm_gazebo</description>
  <maintainer email="vasilyev.georgy@gmail.com">Georgy Vasilyev</maintainer>

  <license>BSD</license>

  <author email="vasilyev.georgy@gmail.com">Georgy Vasilyev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rarm_control</run_depend>
  <run_depend>rarm_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
